--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@
 *.jar
 *.war
 *.ear
-
+#Other eclipse stuff
+*.project
+*.classpath
+*.settings
+*.log
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
