--- a/inferray-correctness/.settings/org.sonar.ide.eclipse.core.prefs
+++ b/inferray-correctness/.settings/org.sonar.ide.eclipse.core.prefs
@@ -1,5 +1,5 @@
 eclipse.preferences.version=1
-extraProperties=sonar.host.url\=http\://localhost\:9000\r\nsonar.jdbc.password\=sonar\r\nsonar.jdbc.url\=jdbc\:h2\:tcp\://localhost\:9092/sonar\r\nsonar.jdbc.username\=sonar
+extraProperties=sonar.jdbc.username\=sonar\r\nsonar.host.url\=http\://localhost\:9000\r\nsonar.jdbc.password\=sonar\r\nsonar.jdbc.url\=jdbc\:h2\:tcp\://localhost\:9092/sonar
 projectKey=fr.ujm.tse.lt2c.satin\:inferray-correctness
 serverUrl=http\://localhost\:9000
 version=2
