--- a/inferray-bindings/pom.xml
+++ b/inferray-bindings/pom.xml
@@ -24,6 +24,13 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	<distributionManagement>
+		<repository>
+			<id>internal.repo</id>
+			<name>Temporary Staging Repository</name>
+			<url>file://${project.build.directory}/mvn-repo</url>
+		</repository>
+	</distributionManagement>
 	<build>
 		<plugins>
 			<plugin>
