--- a/pom.xml
+++ b/pom.xml
@@ -84,5 +84,6 @@
 	</distributionManagement>
 	<properties>
 		<github.global.server>github</github.global.server>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 </project>
