--- a/inferray-bindings/pom.xml
+++ b/inferray-bindings/pom.xml
@@ -3,7 +3,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>fr.ujm.tse.lt2c.satin</groupId>
 	<artifactId>inferray-bindings</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<parent>
+		<groupId>fr.ujm.tse.lt2c.satin</groupId>
+		<artifactId>inferray</artifactId>
+		<version>0.0.2-SNAPSHOT</version>
+	</parent>
 	<name>Bind Inferray with common triples stores</name>
 	<dependencies>
 		<dependency>
@@ -15,7 +19,7 @@
 		<dependency>
 			<groupId>fr.ujm.tse.lt2c.satin</groupId>
 			<artifactId>inferray-core</artifactId>
-			<version>0.1.4-SNAPSHOT</version>
+			<version>0.0.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
