--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>fr.ujm.tse.lt2c.satin</groupId>
 	<artifactId>inferray</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Inferray</name>
 	<description>Parent maven project for inferray</description>
@@ -51,7 +51,6 @@
 				<artifactId>site-maven-plugin</artifactId>
 				<version>0.9</version>
 				<configuration>
-					<merge>true</merge>
 					<message>Maven artifacts for ${project.version}</message>  <!-- git commit message -->
 					<noJekyll>true</noJekyll>                                  <!-- disable webpage processing -->
 					<outputDirectory>${project.build.directory}/mvn-repo</outputDirectory> <!-- matches distribution management repository url above -->
@@ -59,6 +58,7 @@
 					<includes>
 						<include>**/*</include>
 					</includes>
+					<merge>true</merge>
 					<repositoryName>inferray</repositoryName>
 					<repositoryOwner>jsubercaze</repositoryOwner>
 				</configuration>
