--- a/inferray-core/pom.xml
+++ b/inferray-core/pom.xml
@@ -1,7 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>fr.ujm.tse.lt2c.satin</groupId>
 	<artifactId>inferray-core</artifactId>
 	<parent>
 		<groupId>fr.ujm.tse.lt2c.satin</groupId>
@@ -33,6 +32,10 @@
 	</developers>
 	<repositories>
 		<repository>
+			<id>central</id>
+			<url>http://repo1.maven.org/</url>
+		</repository>
+		<repository>
 			<id>Apache Snapshot</id>
 			<url>https://repository.apache.org/content/groups/snapshots/</url>
 		</repository>
@@ -56,9 +59,13 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.jena</groupId>
-			<artifactId>apache-jena-libs</artifactId>
-			<type>pom</type>
-			<version>2.11.0</version>
+			<artifactId>jena-core</artifactId>
+			<version>2.12.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.jena</groupId>
+			<artifactId>jena-arq</artifactId>
+			<version>2.12.0</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -86,11 +93,11 @@
 			<artifactId>colt</artifactId>
 			<version>1.2.0</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
 			<version>1.3-SNAPSHOT</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
@@ -137,6 +144,33 @@
 						<descriptorRef>jar-with-dependencies</descriptorRef>
 					</descriptorRefs>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.github.github</groupId>
+				<artifactId>site-maven-plugin</artifactId>
+				<version>0.10-SNAPSHOT</version>
+				<configuration>
+					<message>Maven artifacts for ${project.version}</message>  <!-- git commit message -->
+					<noJekyll>true</noJekyll>                                  <!-- disable webpage processing -->
+					<outputDirectory>${project.build.directory}/mvn-repo</outputDirectory> <!-- matches distribution management repository url above -->
+					<branch>refs/heads/mvn-repo</branch>                       <!-- remote branch name -->
+					<includes>
+						<include>**/*</include>
+					</includes>
+					<merge>true</merge>
+					<repositoryName>inferray</repositoryName>
+					<repositoryOwner>jsubercaze</repositoryOwner>
+				</configuration>
+				<executions>
+					<!-- run site-maven-plugin's 'site' target as part of the build's normal 
+						'deploy' phase -->
+					<execution>
+						<goals>
+							<goal>site</goal>
+						</goals>
+						<phase>deploy</phase>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
